org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/Constraint/ConstraintTest_003/003_ConstraintTest.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard

package test {
	class Main
	{
		
		operation main() : String 
		post testPostcond is do
			result!=""
		end
		
		is do 
			//StdIO.writeln("Hello world")
			result := "hello"
		end
		
		
		
	}
	

}

