org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/GenericBounds/GenericBounds_op_returnType/002_GenericBounds_op_returnType.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard
using kermeta::io::StdIO => stdio


package test {
	
	class Main {
		
		//attribute a : Sequence[A[D,D]]
		
		operation main() : Void is do 
			//stdio.writeln("Hello world !")
		end


	
		operation test() : A[D,D] is do
			result:=void
		end

/*
		operation test2() : Void is do
			
		end
	*/

	}
	
	
	class A[Y,X:B]{
		
	}
	
	class B inherits D{
	}
	
	
	class C inherits B{
	}
	
	class D {
	}
	
}